changes in list view - added cards - removed list

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,7 +37,8 @@ $colors: (
   secondary:  $dark-tangerine,
   danger:     #f53d3d,
   light:      $pattens-blue,
-  dark:       $bermuda-grey
+  dark:       $aubergine,
+  icon_grey: #D8D8D8,
 );
 
 
