added login page

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,6 +34,7 @@ $fab-content-margin : 20px;
 
 $colors: (
   primary:    $polo-blue,
+  primary-dark:   $bermuda-grey,
   secondary:  $dark-tangerine,
   danger:     #f53d3d,
   light:      $pattens-blue,
