--- a/src/pages/add-notice/add-notice.scss
+++ b/src/pages/add-notice/add-notice.scss
@@ -1,3 +1,29 @@
 page-add-notice {
 
+    #noticeFiles{    
+        width: 0.1px;
+	    height: 0.1px;
+	    opacity: 0;
+	    overflow: hidden;
+	    position: absolute;
+	    z-index: -1;
+    }
+
+    #noticeFiles + label {
+        font-size: 1.25em;
+        font-weight: 700;
+        color: white;
+        background-color: black;
+        display: inline-block;
+    }
+
+    #noticeFiles:focus + label,
+    #noticeFiles + label:hover {
+        background-color: red;
+    }
+
+    #noticeFiles + label {
+        cursor: pointer; /* "hand" cursor */
+    }
+
 }
