--- a/src/pages/login-page/login-page.scss
+++ b/src/pages/login-page/login-page.scss
@@ -13,6 +13,24 @@ page-login-page {
         font-size: 2em;
     }
 
+    .form-container{
+        margin-top: 90px;
+        margin-right: 16px;
+
+        @media (min-width: 500px){
+            padding: 0 20%;
+        }
+
+        @media (min-width: 600px){
+            padding: 0 25%;
+        }
+
+        
+        @media (min-width: 768px){
+            padding: 0 30%;
+        }
+    }
+
     ion-input{
         font-size: 1.5em;
     }
